# preludio

./: .gitignore  CHANGELOG.md  LICENCE  README.md  go.mod  go.sum  main.go  make.ps1  package-lock.json  package.json  preludio.g4  preludioLexer.g4  preludioParser.g4  read_bytecode_test.py  tsconfig.json  webpack.config.js
cli/: codeEditor.go  go.mod  go.sum  main.go
core/: builtins.go  builtins_test.go  full_language_test.go  go.mod  go.sum  intern.go  lang_builtins_test.go  lang_expressions_test.go  operators.go  operators_expressions_test.go  operators_test.go  output.go  std.go  stmt_test.go  type_system.go  utils.go  vm.go
diluvio/: app.go  go.mod  go.sum
gui/: app.go
preludio/: go.mod  go.sum  intern.go  internals.go  operands.go  operands_test.go  operators.go  operators_test.go  output.go  std.go  type_system.go  utils.go  vm.go
preludio-vm/: go.mod  go.sum  internals.go  main.go  prql_std.go  std.go  type_system.go  vm.go
prqlgo/: go.mod  internals.go  main.go  prql_std.go  type_system.go  vm.go
prqlvm/: Cargo.toml
prqlvm/src/: internal.rs  main.rs  prql_std.rs  type_system.rs
src/: builtins.go  consts.go  extension.ts  go.mod  go.sum  intern.go  operators.go  utils.go  vm.go
studio/: app.go  go.mod  wails.json
test_files/: 00_test_min.prql  02_Tables.prql  debug.prel  debug.preq  flow_control.preq  functions.preq  literals.preq  nested_pipes.preq  test_all.preq  test_join_0.prel  test_join_0.preq  test_lists.preq  test_literals.preq  test_nested_pipes.preq
tests/: 00_test_min.prql  01_Functions.prql  03_Syntax.prql  05_FunWithPipes.prql  (+1 more)
(+321 files in other folders)
