[package]
name = "prqlvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
polars = { version = "0.24.3", features = ["lazy"] }
specs = "0.16.1"
specs-derive = "0.4.1"
